# Egghead

./: README.md  io.github.josephmawa.Egghead.json  meson.build  meson.options
data/: io.github.josephmawa.Egghead.desktop.in  io.github.josephmawa.Egghead.gschema.xml  io.github.josephmawa.Egghead.metainfo.xml.in  io.github.josephmawa.Egghead.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  egghead.pot  meson.build  pt_BR.po
src/: about.js  application.js  category.js  main.js  meson.build  preferences.js  window.js
src/lib/: he.js
src/res/: io.github.josephmawa.Egghead.data.gresource.xml  io.github.josephmawa.Egghead.src.gresource.xml
src/styles/: index.css
src/ui/: help-overlay.ui  page.ui  preferences.ui  window.ui
src/ui/category-list/: category-list-item.ui
src/util/: data.js  page.js  quiz.js  utils.js
